<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_grid.xml."
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:alignmentMode="alignMargins"
    android:layout_row="4"
    android:layout_column="2"
    android:layout_gravity="fill"
    android:layout_weight="1"
    android:orientation="vertical"
    tools:context=".MainActivity">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:text="@string/hello_message"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_row="0"
            android:layout_column="1"
            app:layout_constraintTop_toTopOf="parent" />

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button"
            android:layout_width="208sp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/ButtonText" />


        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="192sp"
            android:layout_height="46sp"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:onClick="onDisplay"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/box" />


        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="146dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:background="#0000"
            app:srcCompat="@drawable/flag" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="140sp"
            android:layout_height="46sp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_weight="1"
            android:onClick="onCheckChanged"
            android:text="@string/setsw" />


        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="35dp"
            android:layout_height="56dp"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:layout_row="4"
            android:layout_column="1"
            android:text="@string/type" />


</GridLayout>

